try fix safari on ios

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
     margin: 0;
     overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    -webkit-overflow-scrolling: touch;
+    overscroll-behavior: none;
+    touch-action: none;
 }
 
 #blurred-backdrop {
@@ -12,6 +18,8 @@ body {
     background-position: center;
     z-index: -1;
     overflow: hidden;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
 }
 
 #webgl-canvas {
@@ -21,6 +29,9 @@ body {
     width: 100%;
     height: 100%;
     z-index: 0;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
+    touch-action: none;
 }
 
 .tooltip {
